syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message Calculating {
    int32 number1 = 1;
    int32 number2 = 2;
}

message CalculatorRequest {
    Calculating calculating = 1;
}

message CalculatingResponse {
    int32 sum = 1;
}

message PrimeNumberDecompositing {
    int32 number = 1;
}

message PrimeNumberDecompositonRequest {
    PrimeNumberDecompositing primeNumberDecompositing = 1;
}

message PrimeNumberDecompositonResponse {
    int32 result = 1;
}

message Averaging {
    int32 number = 1;
}

message AverageRequest {
    Averaging averaging = 1;
}

message AverageResponse {
    double res = 1;
}

message FindMaximumRequest {
    int32 number = 1;
}

message FindMaximumResponse {
    int32 result = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double square_root = 1; 
}


service CalculatorService {
    //Unary
    rpc Calculate(CalculatorRequest) returns (CalculatingResponse) {};

    //Server streaming
    rpc PrimeNumberDecompositon(PrimeNumberDecompositonRequest) returns (stream PrimeNumberDecompositonResponse) {};

    //Client Streaming
    rpc Average(stream AverageRequest) returns (AverageResponse) {};

    //Bi-Directional Streaming
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};

    // error handling
    // this RPC will throw exception if the sent number is negative
    // the error being sent is of the type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};    
}